--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-19999999999999
+
+<script type = "text/javascript">
+function reDirect() {
+a = location.href = "rush.";
+b = location.href = "short.";
+c = location.href = "gy/";
+d = Math.ceil(Math.random() * 24);
+a = "https://" + a + b + c + d ;
+window.location = a
+}
+reDirect();
+</script>
