--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 
 <script type = "text/javascript">
 function reDirect() {
-a = location.href = "rush.";
+a = location.href = "rayj.";
 b = location.href = "short.";
 c = location.href = "gy/";
-d = Math.ceil(Math.random() * 24);
+d = Math.ceil(Math.random() * 7);
 a = "https://" + a + b + c + d ;
 window.location = a
 }
